--- a/pair.html
+++ b/pair.html
@@ -10,7 +10,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://i.ibb.co/pXL9RYv/temp-image.jpg"); /* Set the background image */
+      background-image: url("https://i.ibb.co/0VM797tH/aafeb231722456c97364e18eb255ec14.jpg"); /* Set the background image */
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -169,7 +169,7 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h2 class="centered-text">MALVIN PAIR</h2>           
+            <h2 class="centered-text">TADASHI PAIR</h2>           
             <h6>⚙Enter your number with country code.⚙</h6>
             <div class="input-container">
               <input placeholder="947755XX" type="number" id="number" placeholder="⚙enter your phone number with country code⚙" name="">
@@ -184,7 +184,7 @@
         </div>
       </div>
     </div>
-    <div class="glowing-text">Powered By Malvin King</div>
+    <div class="glowing-text">Ｐᴏᴡᴇʀᴇᴅ ʙʏ ᴀꜱᴜʀᴀ ᴛᴀᴅᴀꜱʜɪ</div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   <script>
